--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,13 +1,72 @@
-
-.reveal section {
-  background-color: #ffffff;
-  color: #515E65;
-  font-family: 'MuseoSans', sans-serif;
-  font-size: 40px;
-  font-weight: 500;
-  line-height: 1;
-  -webkit-text-size-adjust: 100%;
+.reveal pre {
+  width: 100%;
+  box-shadow : none;
 }
+
+.reveal pre code {
+  font-size: 1.2em;
+  line-height: 1.2;
+  max-height: 60vh !important;
+  opacity: 0.95;
+  border-radius: 10px;
+}
+
+.reveal .slides section .code-presenting-annotation {
+  color: #22152e;
+  background: white;
+  padding: 1px 15px;
+  border-radius: 15px;
+  opacity: 0.75 !important;
+  font-size: 50% !important;
+}
+
+.reveal p span.slide-title {
+  color: white;
+  background: #3e2e59;
+  padding: 4px 15px;
+  opacity: 0.75 !important;
+  border-radius: 15px;
+  display: none;
+}
+
+.reveal div.left {
+    float: left;
+    z-index: -10;
+    width: 45%;
+}
+
+.reveal div.right {
+    float: right;
+    z-index: -10;
+    width: 55%;
+}
+
+.reveal a.pro-link {
+    font-size: 0.5em;
+}
+
+.reveal a {
+    # color: #af5a08 !important;
+}
+
+.reveal a:hover {
+    # color: #e27b1f !important;
+}
+
+#gp-logo img {
+  max-height: 2em;
+  max-width: none;
+}
+
+.white {
+  color: white;
+}
+
+.gp-tip { font-size : 1.5em; }
+
+.gp-contact { font-size : 1.4em; }
+
+.gp-download { margin-left: 10px; }
 
 h1, h2, h3, h4 {
   color:#00B9D9 !important;
